--- a/e-commerce/src/App.css
+++ b/e-commerce/src/App.css
@@ -1,3 +1,9 @@
+#root{
+    height: 100%;
+    overflow-x: hidden;
+    position: relative;
+}
+
 #backdrop{
     position: absolute;
     z-index: 25;
